--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
                 
                 <p class="hero-description">
-                    I build intelligent systems that transform raw data into strategic business wins. I’ve engineered recommendation engines with >85% precision, churn models with 93%+ accuracy, and RAG/agent applications that streamline decision making. My work spans full ML pipelines, AI automation, and data-driven product insights.                </p>
+                    Designing predictive models, crafting recommendation engines, deploying production-ready RAG applications, and automating workflows with n8n, turning data into real-world impact. </p>
                 
                 <!-- CTA Buttons -->
                 <div class="hero-cta">
